add jvm args for java app