@@ -14,6 +14,7 @@ tasks.register('tikaIndexer', JavaExec) {
   dependsOn 'classes'
   mainClass = 'lia.TikaIndexer'
   classpath = sourceSets.main.runtimeClasspath
+  jvmArgs = ["--enable-native-access=ALL-UNNAMED", "--add-modules", "jdk.incubator.vector"]
   args "${getRootDir()}/tikaIndex", "${getRootDir()}/tika/data"
 }
 
